<resources>
    <string name="app_name">FoodPlus</string>
    <string name="title_activity_add_product">FoodPlus</string>

    <string name="enter_contacts">Enter Contacts</string>
    <string name="contacts_label">Contacts</string>
    <string name="add_messengerBtn">Add Messenger</string>
    <string name="enter_email">Enter email</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="add_product">Add Product</string>
    <string name="add_messenger">Add Messenger</string>
    <string name="or">OR</string>

    <!-- Strings related to login -->

    <string name="forgot_your_login_details_get_help_signing_in">Forgot your login details? Get help signing in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register_a_new_account">REGISTER A NEW ACCOUNT</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait...</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Invalid eMail Address</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_request">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>


</resources>
