<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".AddMessengerActivity">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:text="@string/name_label"
        android:paddingTop="@dimen/label_padding"
        android:textSize="@dimen/label_text_size" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_name" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:text="@string/email_label"
        android:paddingTop="@dimen/label_padding"
        android:textSize="@dimen/label_text_size" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/enter_email"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="85dp"
        android:layout_height="match_parent"
        android:text="@string/contacts_label"
        android:paddingTop="@dimen/label_padding"
        android:textSize="@dimen/label_text_size" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/enter_contacts"
        android:inputType="number"
        android:hint="@string/enter_contacts"/>

</LinearLayout>



<Button
    android:id="@+id/add_delivery_guy__btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:text="@string/add_messengerBtn" />


</LinearLayout>